fix: validate step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,15 +70,25 @@ jobs:
           CARGO_HOME="${CARGO_HOME:-$HOME/.cargo}"
           TARGET_DIR="${CARGO_TARGET_DIR:-$GITHUB_WORKSPACE/target}"
           [[ -d "$CACHE" ]] || { echo "No shared cache present."; exit 0; }
-
+      
           echo "--- Cache preflight ---"
-          RUSTC_VER="$(nix develop -c rustc -V 2>/dev/null | awk '{print $2}' || rustc -V | awk '{print $2}')"
-          LOCK_SHA="$(sha256sum Cargo.lock | awk '{print $1}')"
+      
+          # Helper: run a command inside the devshell (falls back to host if nix develop is absent)
+          indev() { nix develop -c bash -c "$*" 2>/dev/null || bash -c "$*"; }
+      
+          # Get rustc semver and Cargo.lock sha *inside* the devshell so tools exist there.
+          RUSTC_VER="$(indev 'rustc -V | cut -d\" \" -f2' || echo unknown)"
+          if [[ -f Cargo.lock ]]; then
+            LOCK_SHA="$(indev 'sha256sum Cargo.lock | cut -d\" \" -f1')"
+          else
+            echo "Cargo.lock missing; skipping manifest check."
+            LOCK_SHA="nolock"
+          fi
+      
           MAN="$CACHE/.manifest"; READY="$CACHE/.ready"
           WANT="$(printf '%s\n%s\n' "$RUSTC_VER" "$LOCK_SHA")"
-
           REASONS=()
-
+      
           echo "[1/2] Checking manifest/ready..."
           if [[ ! -f "$READY" || ! -f "$MAN" ]]; then
             echo "manifest/ready missing"
@@ -90,21 +100,21 @@ jobs:
               REASONS+=("manifest mismatch")
             fi
           fi
-
+      
           echo "[2/2] cargo fetch --locked..."
           if ! nix develop -c cargo fetch --locked -q; then
-            echo "cargo fetch failed → clearing registry/src + git/checkouts"
+            echo "cargo fetch failed → clearing registry/src + git/checkouts, then re-fetching"
             rm -rf "$CARGO_HOME"/registry/src/* "$CARGO_HOME"/git/checkouts/* || true
-            REASONS+=("re-fetch needed")
             nix develop -c cargo fetch --locked
+            REASONS+=("re-fetched dependencies")
           fi
-
+      
           # If manifest mismatched, clear target to avoid stale artifacts (we don't cache it).
           if printf '%s\n' "${REASONS[@]}" | grep -q "manifest mismatch"; then
             echo "Clearing target/ due to manifest mismatch"
             rm -rf "$TARGET_DIR" || true
           fi
-
+      
           echo "--- Preflight summary: ${REASONS[*]:-OK} ---"
 
       - name: Release cache lock
@@ -384,15 +394,25 @@ jobs:
           CARGO_HOME="${CARGO_HOME:-$HOME/.cargo}"
           TARGET_DIR="${CARGO_TARGET_DIR:-$GITHUB_WORKSPACE/target}"
           [[ -d "$CACHE" ]] || { echo "No shared cache present."; exit 0; }
-
+      
           echo "--- Cache preflight ---"
-          RUSTC_VER="$(nix develop -c rustc -V 2>/dev/null | awk '{print $2}' || rustc -V | awk '{print $2}')"
-          LOCK_SHA="$(sha256sum Cargo.lock | awk '{print $1}')"
+      
+          # Helper: run a command inside the devshell (falls back to host if nix develop is absent)
+          indev() { nix develop -c bash -c "$*" 2>/dev/null || bash -c "$*"; }
+      
+          # Get rustc semver and Cargo.lock sha *inside* the devshell so tools exist there.
+          RUSTC_VER="$(indev 'rustc -V | cut -d\" \" -f2' || echo unknown)"
+          if [[ -f Cargo.lock ]]; then
+            LOCK_SHA="$(indev 'sha256sum Cargo.lock | cut -d\" \" -f1')"
+          else
+            echo "Cargo.lock missing; skipping manifest check."
+            LOCK_SHA="nolock"
+          fi
+      
           MAN="$CACHE/.manifest"; READY="$CACHE/.ready"
           WANT="$(printf '%s\n%s\n' "$RUSTC_VER" "$LOCK_SHA")"
-
           REASONS=()
-
+      
           echo "[1/2] Checking manifest/ready..."
           if [[ ! -f "$READY" || ! -f "$MAN" ]]; then
             echo "manifest/ready missing"
@@ -404,20 +424,21 @@ jobs:
               REASONS+=("manifest mismatch")
             fi
           fi
-
+      
           echo "[2/2] cargo fetch --locked..."
           if ! nix develop -c cargo fetch --locked -q; then
-            echo "cargo fetch failed → clearing registry/src + git/checkouts"
+            echo "cargo fetch failed → clearing registry/src + git/checkouts, then re-fetching"
             rm -rf "$CARGO_HOME"/registry/src/* "$CARGO_HOME"/git/checkouts/* || true
-            REASONS+=("re-fetch needed")
             nix develop -c cargo fetch --locked
+            REASONS+=("re-fetched dependencies")
           fi
-
+      
+          # If manifest mismatched, clear target to avoid stale artifacts (we don't cache it).
           if printf '%s\n' "${REASONS[@]}" | grep -q "manifest mismatch"; then
             echo "Clearing target/ due to manifest mismatch"
             rm -rf "$TARGET_DIR" || true
           fi
-
+      
           echo "--- Preflight summary: ${REASONS[*]:-OK} ---"
 
       - name: Release cache lock
@@ -742,15 +763,25 @@ jobs:
           CARGO_HOME="${CARGO_HOME:-$HOME/.cargo}"
           TARGET_DIR="${CARGO_TARGET_DIR:-$GITHUB_WORKSPACE/target}"
           [[ -d "$CACHE" ]] || { echo "No shared cache present."; exit 0; }
-
+      
           echo "--- Cache preflight ---"
-          RUSTC_VER="$(nix develop -c rustc -V 2>/dev/null | awk '{print $2}' || rustc -V | awk '{print $2}')"
-          LOCK_SHA="$(sha256sum Cargo.lock | awk '{print $1}')"
+      
+          # Helper: run a command inside the devshell (falls back to host if nix develop is absent)
+          indev() { nix develop -c bash -c "$*" 2>/dev/null || bash -c "$*"; }
+      
+          # Get rustc semver and Cargo.lock sha *inside* the devshell so tools exist there.
+          RUSTC_VER="$(indev 'rustc -V | cut -d\" \" -f2' || echo unknown)"
+          if [[ -f Cargo.lock ]]; then
+            LOCK_SHA="$(indev 'sha256sum Cargo.lock | cut -d\" \" -f1')"
+          else
+            echo "Cargo.lock missing; skipping manifest check."
+            LOCK_SHA="nolock"
+          fi
+      
           MAN="$CACHE/.manifest"; READY="$CACHE/.ready"
           WANT="$(printf '%s\n%s\n' "$RUSTC_VER" "$LOCK_SHA")"
-
           REASONS=()
-
+      
           echo "[1/2] Checking manifest/ready..."
           if [[ ! -f "$READY" || ! -f "$MAN" ]]; then
             echo "manifest/ready missing"
@@ -762,20 +793,21 @@ jobs:
               REASONS+=("manifest mismatch")
             fi
           fi
-
+      
           echo "[2/2] cargo fetch --locked..."
           if ! nix develop -c cargo fetch --locked -q; then
-            echo "cargo fetch failed → clearing registry/src + git/checkouts"
+            echo "cargo fetch failed → clearing registry/src + git/checkouts, then re-fetching"
             rm -rf "$CARGO_HOME"/registry/src/* "$CARGO_HOME"/git/checkouts/* || true
-            REASONS+=("re-fetch needed")
             nix develop -c cargo fetch --locked
+            REASONS+=("re-fetched dependencies")
           fi
-
+      
+          # If manifest mismatched, clear target to avoid stale artifacts (we don't cache it).
           if printf '%s\n' "${REASONS[@]}" | grep -q "manifest mismatch"; then
             echo "Clearing target/ due to manifest mismatch"
             rm -rf "$TARGET_DIR" || true
           fi
-
+      
           echo "--- Preflight summary: ${REASONS[*]:-OK} ---"
 
       - name: Release cache lock
