--- a/.github/actions/deploy/deploy-staging-preview/action.yml
+++ b/.github/actions/deploy/deploy-staging-preview/action.yml
@@ -35,19 +35,23 @@ runs:
       with:
         registry: ${{ env.ECR_REGISTRY_SECRET }}
 
-    - name: Install kubectl, kubernetes-helm, and awscli
+    - name: Install kubectl, helm, and awscli
       run: |
-        curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-        chmod +x ./kubectl
-        sudo mv ./kubectl /usr/local/bin/kubectl
-        VERSION=$(curl --silent "https://api.github.com/repos/helm/helm/releases/latest" | grep '"tag_name"' | sed -E 's/.*"([^"]+)".*/\1/')
-        curl -L "https://get.helm.sh/helm-${VERSION}-linux-amd64.tar.gz" -o helm.tar.gz
-        tar -zxvf helm.tar.gz
-        sudo mv linux-amd64/helm /usr/local/bin/helm
-        rm -rf linux-amd64 helm.tar.gz
-        sudo apt-get update
-        sudo apt-get install -y python3-pip
-        pip3 install awscli --upgrade
+        set -euo pipefail
+        sudo apt-get update -y
+        sudo apt-get install -y ca-certificates curl python3-pip
+        sudo update-ca-certificates
+
+        # Install kubectl
+        curl -fsSL -o kubectl "https://dl.k8s.io/release/$(curl -fsSL https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+        chmod +x kubectl
+        sudo mv kubectl /usr/local/bin/kubectl
+
+        # Install Helm (official script handles SSL and mirrors)
+        curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
+
+        # Install AWS CLI
+        pip3 install --upgrade awscli
       shell: bash
 
     - name: Configure kubectl
@@ -62,64 +66,48 @@ runs:
     - name: Delete pods
       continue-on-error: true
       run: |
-        kubectl delete pod staging-preview-validator-1 -n staging-preview || true
-        kubectl delete pod staging-preview-validator-2 -n staging-preview || true
-        kubectl delete pod staging-preview-validator-3 -n staging-preview || true
-        kubectl delete pod staging-preview-validator-4 -n staging-preview || true
-        kubectl delete pod staging-preview-validator-5 -n staging-preview || true
+        kubectl delete pod -n staging-preview staging-preview-validator-{1..5} || true
         echo "Waiting for pods to delete..."
-        kubectl wait --for=delete pod/staging-preview-validator-1 pod/staging-preview-validator-2 pod/staging-preview-validator-3 pod/staging-preview-validator-4 pod/staging-preview-validator-5 -n staging-preview --timeout=120s || true
+        kubectl wait --for=delete pod/staging-preview-validator-{1..5} -n staging-preview --timeout=120s || true
       shell: bash
 
     - name: Delete substrate PVCs
       continue-on-error: true
       if: inputs.no-wipe != 'true'
       run: |
-        kubectl delete pvc staging-preview-validator-1-claim-substrate-node-data -n staging-preview
-        kubectl delete pvc staging-preview-validator-2-claim-substrate-node-data -n staging-preview
-        kubectl delete pvc staging-preview-validator-3-claim-substrate-node-data -n staging-preview
-        kubectl delete pvc staging-preview-validator-4-claim-substrate-node-data -n staging-preview
-        kubectl delete pvc staging-preview-validator-5-claim-substrate-node-data -n staging-preview
+        kubectl delete pvc -n staging-preview staging-preview-validator-{1..5}-claim-substrate-node-data || true
         echo "Waiting for PVCs to delete..."
-        kubectl wait --for=delete pvc/staging-preview-validator-1-claim-substrate-node-data pvc/staging-preview-validator-2-claim-substrate-node-data pvc/staging-preview-validator-3-claim-substrate-node-data pvc/staging-preview-validator-4-claim-substrate-node-data pvc/staging-preview-validator-5-claim-substrate-node-data -n staging-preview --timeout=120s
+        kubectl wait --for=delete pvc/staging-preview-validator-{1..5}-claim-substrate-node-data -n staging-preview --timeout=120s || true
       shell: bash
 
     - name: Deploy with chain-spec and image override
       run: |
         cd sidechains-infra-priv/src/kube/helm/partner-chains-node-chart/
-        helm upgrade --install staging-preview-validator-1 . -f values/chains/staging-preview.yaml -f values/nodes/staging-preview/validator/staging-preview-validator-1 --set images.substrateNode="${{ inputs.image }}" --set chain.chainspec_filename="staging-preview-chain-spec-${{ inputs.sha }}.json"
-        helm upgrade --install staging-preview-validator-2 . -f values/chains/staging-preview.yaml -f values/nodes/staging-preview/validator/staging-preview-validator-2 --set images.substrateNode="${{ inputs.image }}" --set chain.chainspec_filename="staging-preview-chain-spec-${{ inputs.sha }}.json"
-        helm upgrade --install staging-preview-validator-3 . -f values/chains/staging-preview.yaml -f values/nodes/staging-preview/validator/staging-preview-validator-3 --set images.substrateNode="${{ inputs.image }}" --set chain.chainspec_filename="staging-preview-chain-spec-${{ inputs.sha }}.json"
-        helm upgrade --install staging-preview-validator-4 . -f values/chains/staging-preview.yaml -f values/nodes/staging-preview/validator/staging-preview-validator-4 --set images.substrateNode="${{ inputs.image }}" --set chain.chainspec_filename="staging-preview-chain-spec-${{ inputs.sha }}.json"
-        helm upgrade --install staging-preview-validator-5 . -f values/chains/staging-preview.yaml -f values/nodes/staging-preview/validator/staging-preview-validator-5 --set images.substrateNode="${{ inputs.image }}" --set chain.chainspec_filename="staging-preview-chain-spec-${{ inputs.sha }}.json"
+        for i in {1..5}; do
+          helm upgrade --install staging-preview-validator-$i . \
+            -f values/chains/staging-preview.yaml \
+            -f values/nodes/staging-preview/validator/staging-preview-validator-$i \
+            --set images.substrateNode="${{ inputs.image }}" \
+            --set chain.chainspec_filename="staging-preview-chain-spec-${{ inputs.sha }}.json"
+        done
       shell: bash
 
     - name: Wait
       run: |
-        echo "Waiting for staging-preview-validator-1..."
-        kubectl wait --for=condition=ready pod staging-preview-validator-1 -n staging-preview --timeout=300s
-        echo "Waiting for staging-preview-validator-2..."
-        kubectl wait --for=condition=ready pod staging-preview-validator-2 -n staging-preview --timeout=300s
-        echo "Waiting for staging-preview-validator-3..."
-        kubectl wait --for=condition=ready pod staging-preview-validator-3 -n staging-preview --timeout=300s
-        echo "Waiting for staging-preview-validator-4..."
-        kubectl wait --for=condition=ready pod staging-preview-validator-4 -n staging-preview --timeout=300s
-        echo "Waiting for staging-preview-validator-5..."
-        kubectl wait --for=condition=ready pod staging-preview-validator-5 -n staging-preview --timeout=300s
+        for i in {1..5}; do
+          echo "Waiting for staging-preview-validator-$i..."
+          kubectl wait --for=condition=ready pod staging-preview-validator-$i -n staging-preview --timeout=300s
+        done
       shell: bash
 
     - name: Validate
       run: |
-        echo "Checking staging-preview-validator-1..."
-        kubectl get pod staging-preview-validator-1 -n staging-preview -o jsonpath="{.status.containerStatuses[*].ready}"
-        echo "Checking staging-preview-validator-2..."
-        kubectl get pod staging-preview-validator-2 -n staging-preview -o jsonpath="{.status.containerStatuses[*].ready}"
-        echo "Checking staging-preview-validator-3..."
-        kubectl get pod staging-preview-validator-3 -n staging-preview -o jsonpath="{.status.containerStatuses[*].ready}"
-        echo "Checking staging-preview-validator-4..."
-        kubectl get pod staging-preview-validator-4 -n staging-preview -o jsonpath="{.status.containerStatuses[*].ready}"
-        echo "Checking staging-preview-validator-5..."
-        kubectl get pod staging-preview-validator-5 -n staging-preview -o jsonpath="{.status.containerStatuses[*].ready}"
-        kubectl get pods -n staging-preview -o custom-columns='NAME:.metadata.name,READY:.status.containerStatuses[*].ready' | grep -E '^(staging-preview-validator-1|staging-preview-validator-2|staging-preview-validator-3|staging-preview-validator-4|staging-preview-validator-5)' | awk '{if ($2 != "true,true,true,true") exit 1}'
+        for i in {1..5}; do
+          echo "Checking staging-preview-validator-$i..."
+          kubectl get pod staging-preview-validator-$i -n staging-preview -o jsonpath="{.status.containerStatuses[*].ready}"
+        done
+
+        kubectl get pods -n staging-preview -o custom-columns='NAME:.metadata.name,READY:.status.containerStatuses[*].ready' | \
+          grep -E '^staging-preview-validator-[1-5]' | awk '{if ($2 != "true,true,true,true") exit 1}'
         echo "All pods are 5/5 up and ready"
       shell: bash
