--- a/.github/actions/deploy/deploy-staging-preview/action.yml
+++ b/.github/actions/deploy/deploy-staging-preview/action.yml
@@ -48,7 +48,11 @@ runs:
         sudo mv kubectl /usr/local/bin/kubectl
 
         # Install Helm (official script handles SSL and mirrors)
-        curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
+        VERSION=$(curl -fsSL https://api.github.com/repos/helm/helm/releases/latest | grep '"tag_name"' | sed -E 's/.*"([^"]+)".*/\1/')
+        curl -fsSL -o helm.tar.gz "https://github.com/helm/helm/releases/download/${VERSION}/helm-${VERSION}-linux-amd64.tar.gz"
+        tar -zxvf helm.tar.gz
+        sudo mv linux-amd64/helm /usr/local/bin/helm
+        rm -rf linux-amd64 helm.tar.gz
 
         # Install AWS CLI
         pip3 install --upgrade awscli
