--- a/.github/actions/deploy/deploy-staging-preview/action.yml
+++ b/.github/actions/deploy/deploy-staging-preview/action.yml
@@ -71,48 +71,64 @@ runs:
     - name: Delete pods
       continue-on-error: true
       run: |
-        kubectl delete pod -n staging-preview staging-preview-validator-{1..5} || true
+        kubectl delete pod staging-preview-validator-1 -n staging-preview || true
+        kubectl delete pod staging-preview-validator-2 -n staging-preview || true
+        kubectl delete pod staging-preview-validator-3 -n staging-preview || true
+        kubectl delete pod staging-preview-validator-4 -n staging-preview || true
+        kubectl delete pod staging-preview-validator-5 -n staging-preview || true
         echo "Waiting for pods to delete..."
-        kubectl wait --for=delete pod/staging-preview-validator-{1..5} -n staging-preview --timeout=120s || true
+        kubectl wait --for=delete pod/staging-preview-validator-1 pod/staging-preview-validator-2 pod/staging-preview-validator-3 pod/staging-preview-validator-4 pod/staging-preview-validator-5 -n staging-preview --timeout=120s || true
       shell: bash
 
     - name: Delete substrate PVCs
       continue-on-error: true
       if: inputs.no-wipe != 'true'
       run: |
-        kubectl delete pvc -n staging-preview staging-preview-validator-{1..5}-claim-substrate-node-data || true
+        kubectl delete pvc staging-preview-validator-1-claim-substrate-node-data -n staging-preview
+        kubectl delete pvc staging-preview-validator-2-claim-substrate-node-data -n staging-preview
+        kubectl delete pvc staging-preview-validator-3-claim-substrate-node-data -n staging-preview
+        kubectl delete pvc staging-preview-validator-4-claim-substrate-node-data -n staging-preview
+        kubectl delete pvc staging-preview-validator-5-claim-substrate-node-data -n staging-preview
         echo "Waiting for PVCs to delete..."
-        kubectl wait --for=delete pvc/staging-preview-validator-{1..5}-claim-substrate-node-data -n staging-preview --timeout=120s || true
+        kubectl wait --for=delete pvc/staging-preview-validator-1-claim-substrate-node-data pvc/staging-preview-validator-2-claim-substrate-node-data pvc/staging-preview-validator-3-claim-substrate-node-data pvc/staging-preview-validator-4-claim-substrate-node-data pvc/staging-preview-validator-5-claim-substrate-node-data -n staging-preview --timeout=120s
       shell: bash
 
     - name: Deploy with chain-spec and image override
       run: |
         cd sidechains-infra-priv/src/kube/helm/partner-chains-node-chart/
-        for i in {1..5}; do
-          helm upgrade --install staging-preview-validator-$i . \
-            -f values/chains/staging-preview.yaml \
-            -f values/nodes/staging-preview/validator/staging-preview-validator-$i \
-            --set images.substrateNode="${{ inputs.image }}" \
-            --set chain.chainspec_filename="staging-preview-chain-spec-${{ inputs.sha }}.json"
-        done
+        helm upgrade --install staging-preview-validator-1 . -f values/chains/staging-preview.yaml -f values/nodes/staging-preview/validator/staging-preview-validator-1 --set images.substrateNode="${{ inputs.image }}" --set chain.chainspec_filename="staging-preview-chain-spec-${{ inputs.sha }}.json"
+        helm upgrade --install staging-preview-validator-2 . -f values/chains/staging-preview.yaml -f values/nodes/staging-preview/validator/staging-preview-validator-2 --set images.substrateNode="${{ inputs.image }}" --set chain.chainspec_filename="staging-preview-chain-spec-${{ inputs.sha }}.json"
+        helm upgrade --install staging-preview-validator-3 . -f values/chains/staging-preview.yaml -f values/nodes/staging-preview/validator/staging-preview-validator-3 --set images.substrateNode="${{ inputs.image }}" --set chain.chainspec_filename="staging-preview-chain-spec-${{ inputs.sha }}.json"
+        helm upgrade --install staging-preview-validator-4 . -f values/chains/staging-preview.yaml -f values/nodes/staging-preview/validator/staging-preview-validator-4 --set images.substrateNode="${{ inputs.image }}" --set chain.chainspec_filename="staging-preview-chain-spec-${{ inputs.sha }}.json"
+        helm upgrade --install staging-preview-validator-5 . -f values/chains/staging-preview.yaml -f values/nodes/staging-preview/validator/staging-preview-validator-5 --set images.substrateNode="${{ inputs.image }}" --set chain.chainspec_filename="staging-preview-chain-spec-${{ inputs.sha }}.json"
       shell: bash
 
     - name: Wait
       run: |
-        for i in {1..5}; do
-          echo "Waiting for staging-preview-validator-$i..."
-          kubectl wait --for=condition=ready pod staging-preview-validator-$i -n staging-preview --timeout=300s
-        done
+        echo "Waiting for staging-preview-validator-1..."
+        kubectl wait --for=condition=ready pod staging-preview-validator-1 -n staging-preview --timeout=300s
+        echo "Waiting for staging-preview-validator-2..."
+        kubectl wait --for=condition=ready pod staging-preview-validator-2 -n staging-preview --timeout=300s
+        echo "Waiting for staging-preview-validator-3..."
+        kubectl wait --for=condition=ready pod staging-preview-validator-3 -n staging-preview --timeout=300s
+        echo "Waiting for staging-preview-validator-4..."
+        kubectl wait --for=condition=ready pod staging-preview-validator-4 -n staging-preview --timeout=300s
+        echo "Waiting for staging-preview-validator-5..."
+        kubectl wait --for=condition=ready pod staging-preview-validator-5 -n staging-preview --timeout=300s
       shell: bash
 
     - name: Validate
       run: |
-        for i in {1..5}; do
-          echo "Checking staging-preview-validator-$i..."
-          kubectl get pod staging-preview-validator-$i -n staging-preview -o jsonpath="{.status.containerStatuses[*].ready}"
-        done
-
-        kubectl get pods -n staging-preview -o custom-columns='NAME:.metadata.name,READY:.status.containerStatuses[*].ready' | \
-          grep -E '^staging-preview-validator-[1-5]' | awk '{if ($2 != "true,true,true,true") exit 1}'
+        echo "Checking staging-preview-validator-1..."
+        kubectl get pod staging-preview-validator-1 -n staging-preview -o jsonpath="{.status.containerStatuses[*].ready}"
+        echo "Checking staging-preview-validator-2..."
+        kubectl get pod staging-preview-validator-2 -n staging-preview -o jsonpath="{.status.containerStatuses[*].ready}"
+        echo "Checking staging-preview-validator-3..."
+        kubectl get pod staging-preview-validator-3 -n staging-preview -o jsonpath="{.status.containerStatuses[*].ready}"
+        echo "Checking staging-preview-validator-4..."
+        kubectl get pod staging-preview-validator-4 -n staging-preview -o jsonpath="{.status.containerStatuses[*].ready}"
+        echo "Checking staging-preview-validator-5..."
+        kubectl get pod staging-preview-validator-5 -n staging-preview -o jsonpath="{.status.containerStatuses[*].ready}"
+        kubectl get pods -n staging-preview -o custom-columns='NAME:.metadata.name,READY:.status.containerStatuses[*].ready' | grep -E '^(staging-preview-validator-1|staging-preview-validator-2|staging-preview-validator-3|staging-preview-validator-4|staging-preview-validator-5)' | awk '{if ($2 != "true,true,true,true") exit 1}'
         echo "All pods are 5/5 up and ready"
       shell: bash
