--- a/.github/actions/deploy/install-kubectl/action.yml
+++ b/.github/actions/deploy/install-kubectl/action.yml
@@ -1,38 +1,32 @@
 name: "Install kubectl, helm, and awscli"
 description: "Install kubectl, helm, and awscli tools for Kubernetes deployment"
 
-outputs: {}
-
 runs:
   using: "composite"
   steps:
-    - name: Install kubectl, helm, and awscli (minimal, no checksums)
+    - name: Install kubectl, helm, and awscli (Ubuntu 24.04)
       shell: bash
       run: |
         set -euo pipefail
         export DEBIAN_FRONTEND=noninteractive
 
-        # Base packages
+        echo "--- Updating base packages ---"
         sudo apt-get update -y
-        sudo apt-get install -y ca-certificates curl python3-pip
+        sudo apt-get install -y ca-certificates curl python3-pip snapd
         sudo update-ca-certificates
 
-        # Install Helm
-        HELM_VERSION=$(curl -s https://api.github.com/repos/helm/helm/releases/latest | grep '"tag_name"' | sed -E 's/.*"v([^"]+)".*/\1/')
-        echo "Installing Helm v${HELM_VERSION}"
-        curl -fsSL -o helm.tar.gz "https://get.helm.sh/helm-v${HELM_VERSION}-linux-amd64.tar.gz"
-        tar -xzf helm.tar.gz
-        sudo mv linux-amd64/helm /usr/local/bin/helm
-        rm -rf linux-amd64 helm.tar.gz
+        echo "--- Installing Helm via Snap ---"
+        sudo snap install helm --classic
         helm version
 
-        # Install kubectl
+        echo "--- Installing kubectl ---"
         KUBECTL_VER="$(curl -fsSL https://dl.k8s.io/release/stable.txt)"
-        curl -fsSL --retry 5 --retry-connrefused --retry-delay 2 -o kubectl "https://dl.k8s.io/release/${KUBECTL_VER}/bin/linux/amd64/kubectl"
+        curl -fsSL --retry 5 --retry-connrefused --retry-delay 2 -o kubectl \
+          "https://dl.k8s.io/release/${KUBECTL_VER}/bin/linux/amd64/kubectl"
         chmod +x kubectl
         sudo mv kubectl /usr/local/bin/kubectl
         kubectl version --client=true
 
-        # Install AWS CLI
+        echo "--- Installing AWS CLI ---"
         pip3 install --upgrade awscli
         aws --version
